--- a/themes/hyde/static/css/poole.css
+++ b/themes/hyde/static/css/poole.css
@@ -48,7 +48,7 @@ body {
 }
 
 html {
-  font-family: 'Aregular', Arial, sans-serif;
+  font-family: 'Open Sans', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -374,7 +374,7 @@ tbody tr:nth-child(odd) th {
   overflow: hidden; /* clearfix */
   margin-left: -1rem;
   margin-right: -1rem;
-  font-family: 'Aregular', Arial, sans-serif;
+  font-family: 'Open Sans', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #ccc;
   text-align: center;
 }
