Fix nuxeo elements URL

--- a/themes/hyde/layouts/partials/head.html
+++ b/themes/hyde/layouts/partials/head.html
@@ -7,7 +7,7 @@
 
   <!-- Standard Nuxeo header and footer -->
   <script src="https://www.nuxeo.com/assets/js/webcomponents-lite.min.js"></script>
-  <link rel="import" href="https://www.nuxeo.com/assets/elements.build.html" />
+  <link rel="import" href="https://www.nuxeo.com/assets/elements.build.min.html" />
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
