--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -738,7 +738,7 @@ dd a.tag:hover {
 
 .aside {
   background-color: #ecf2f7;
-  background-image: url('https://www.nuxeo.com/assets/imgs/X_GRID.png');
+  background-image: url('https://www.nuxeo.com/assets/imgs/backgrounds/X_GRID.png');
   background-repeat: no-repeat;
   padding-top: 80px !important;
 }
