--- a/themes/hyde/layouts/partials/head.html
+++ b/themes/hyde/layouts/partials/head.html
@@ -53,8 +53,17 @@ analytics.page()
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ .Site.BaseURL }}images/apple-touch-icon-144-precomposed.png">
-  <link rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="https://www.nuxeo.com/assets/icons/apple-touch-icon.png?v=3">
+  <link rel="android-touch-icon" href="https://www.nuxeo.com/assets/icons/android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" href="https://www.nuxeo.com/assets/icons/favicon-32x32.png?v=2" sizes="32x32">
+  <link rel="icon" type="image/png" href="https://www.nuxeo.com/assets/icons/android-chrome-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="https://www.nuxeo.com/assets/icons/favicon-16x16.png?v=2" sizes="16x16">
+  <link rel="manifest" href="https://www.nuxeo.com/assets/icons/manifest.json">
+  <link rel="mask-icon" href="https://www.nuxeo.com/assets/icons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="https://www.nuxeo.com/assets/icons/favicon.ico?v=2">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-TileImage" content="https://www.nuxeo.com/assets/icons/mstile-144x144.png">
+  <meta name="theme-color" content="#2199e8">
 
   <!-- RSS -->
   <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
