--- a/layouts/bench/summary_row.html
+++ b/layouts/bench/summary_row.html
@@ -2,7 +2,11 @@
 <tr class="row {{ (index .Site.Data.bench $data).dbprofile }}">
   <th>
     <a href="{{ .Permalink }}index.html" title="view benchmark report">
-     <span class="tag">{{ (index .Site.Data.bench $data).dbprofile }}</span><span
+     <span class="tag">{{ (index .Site.Data.bench $data).dbprofile }}</span>
+      {{ if and (ne (index .Site.Data.bench $data).kafka nil) (index .Site.Data.bench $data).kafka }}
+      <span class="tag2">Kafka</span>
+      {{ end }}
+      <span
       class="classifier">{{ (index .Site.Data.bench $data).nuxeonodes }}nodes {{ .Params.classifier }}
      </span>
     </a>
