--- a/layouts/partials/benchsuite.html
+++ b/layouts/partials/benchsuite.html
@@ -16,6 +16,9 @@
           <thead>
             <th>Profile</th>
             <th>
+              <div><span>Duration</span></div>
+            </th>
+            <th>
               <div><span>Import</span></div>
             </th>
             <th>
