--- a/layouts/partials/benchsuite.html
+++ b/layouts/partials/benchsuite.html
@@ -12,7 +12,7 @@
 
     <div class="tabs-content">
       <div class="active">
-        <table class="result">
+        <table class="result hover">
           <thead>
             <th>Profile</th>
             <th>
