--- a/layouts/custom/customsummary_row.html
+++ b/layouts/custom/customsummary_row.html
@@ -1,5 +1,5 @@
 {{ $data := .Params.build_number }}
-<tr class="row {{ (index .Site.Data.custombench $data).dbprofile }}">
+<tr class="{{ (index .Site.Data.custombench $data).dbprofile }}">
   <th>
     <a href="{{ .Permalink }}index.html" title="view benchmark report">
       <span class="tag">{{ (index .Site.Data.custombench $data).dbprofile }}</span><span
