--- a/themes/old_hyde/static/css/hyde.css
+++ b/themes/old_hyde/static/css/hyde.css
@@ -347,7 +347,7 @@ a {
   color: #8f5536;
 }
 
-.build, .timems, .times, .time, .avg, .stddev, .rps, .dps  {
+.build, .timems, .times, .time, .avg, .stddev, .rps, .dps, .small  {
   white-space: nowrap;
 }
 
@@ -359,11 +359,11 @@ a {
   color: #5d2e00;
 }
 
-.avg, .rps, .dps {
+.avg, .rps, .dps, .small {
   font-weight: bold;
 }
 
-.build, .avg, .stddev, .pill {
+.build, .avg, .stddev, .pill, .small {
   font-size: .7em;
 }
 
@@ -577,7 +577,7 @@ th div,
 }
 
 /* Tags */
-.tag {
+.tag, .tag2 {
   display: inline-block;
   background-color: #434343;
   color: #fff;
@@ -609,6 +609,10 @@ th div,
   background-color: #7a333d;
 }
 
+.tag2 {
+  background-color: #e67300;
+}
+
 .report.tag {
   background-color: #7a333d;
 }
@@ -618,7 +622,8 @@ th div,
   background-color: #00adff;
 }
 
-h1 .tag {
+h1 .tag,
+h1 .tag2 {
   font-size: 1.1rem;
   vertical-align: middle;
 }
