--- a/themes/old_hyde/layouts/partials/head.html
+++ b/themes/old_hyde/layouts/partials/head.html
@@ -47,13 +47,10 @@ analytics.page()
   <script src="{{ .Site.BaseURL }}js/tabs.js"></script>
 
   <!-- CSS -->
-
-  <link rel="stylesheet" href="//static.nuxeo.com/satellite/8.0.3-menu.1/css/v2-nuxeo-styles.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/benchmarks.css">
-  <!-- <link rel="stylesheet" href="{{ .Site.BaseURL }}css/poole.css"> -->
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/poole.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css">
-  <!-- <link rel="stylesheet" href="{{ .Site.BaseURL }}css/hyde.css"> -->
-  <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'> -->
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/hyde.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Icons -->
   <link rel="apple-touch-icon" sizes="57x57" href="https://www.nuxeo.com/assets/icons/apple-touch-icon.png?v=3">
