Styling: fixed single layout and kafka tags

--- a/themes/hyde/static/css/benchmarks.css
+++ b/themes/hyde/static/css/benchmarks.css
@@ -269,6 +269,11 @@ th div,
   background-color: #7a333d;
 }
 
+.kafka .tag,
+.kafka.tag {
+  background-color: #e67300;
+}
+
 .report.tag {
   background-color: #7a333d;
 }
