--- a/layouts/bench/summary_row.html
+++ b/layouts/bench/summary_row.html
@@ -4,7 +4,7 @@
     <a href="{{ .Permalink }}index.html" title="view benchmark report">
      <span class="tag">{{ (index .Site.Data.bench $data).dbprofile }}</span>
       {{ if and (ne (index .Site.Data.bench $data).kafka nil) (index .Site.Data.bench $data).kafka }}
-      <span class="tag2">Kafka</span>
+      <span class="tag kafka">Kafka</span>
       {{ end }}
       <span
       class="classifier">{{ (index .Site.Data.bench $data).nuxeonodes }}nodes {{ .Params.classifier }}
