Removed unnecessary class

--- a/themes/hyde/layouts/_default/single.html
+++ b/themes/hyde/layouts/_default/single.html
@@ -3,7 +3,7 @@
 	 {{ partial "header.html" . }}
 
    <div class="hero row cover padded is-bg-blue is-white" style="background:  linear-gradient( rgba(0, 103, 255, 0.7), rgba(0, 103, 255, 0.7) ), url('https://res.cloudinary.com/nuxeo/image/upload/f_auto,q_auto:eco/v1528141049/backgrounds/nuxeo-bg-45.jpg');">
-     <div class="large-8 medium-10 small-12 columns cover-left">
+     <div class="large-8 medium-10 small-12 columns">
        <h1>{{ .Title }}</h1>
        <p class="larger is-white">
        </p>
