--- a/layouts/custom/single.html
+++ b/layouts/custom/single.html
@@ -4,7 +4,7 @@
 {{ $data := .Params.build_number }}
 {{ $datapath := .Params.classifier }}
 <div class="hero row cover padded is-bg-blue is-white" style="background:  linear-gradient( rgba(0, 103, 255, 0.7), rgba(0, 103, 255, 0.7) ), url('https://res.cloudinary.com/nuxeo/image/upload/f_auto,q_auto:eco/v1528141049/backgrounds/nuxeo-bg-45.jpg');">
-  <div class="large-8 medium-10 small-12 columns cover-left">
+  <div class="large-8 medium-10 small-12 columns">
     <h1>
       {{ (index .Site.Data.custombench $data).bench_suite }}
       <span class="tag {{ (index .Site.Data.custombench $data).dbprofile }}">{{ (index .Site.Data.custombench $data).dbprofile }}</span>
