--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -3,7 +3,7 @@
 {{ partial "header.html" . }}
 {{ $data := .Params.build_number }}
 
-<div class="hero row cover padded1 is-bg-blue is-white" style="background:  linear-gradient( rgba(0, 103, 255, 0.7), rgba(0, 103, 255, 0.7) ), url('https://res.cloudinary.com/nuxeo/image/upload/f_auto,q_auto:eco/v1528141049/backgrounds/nuxeo-bg-45.jpg');">
+<div class="hero row cover padded1 is-bg-blue is-white" style="background-image: url('https://res.cloudinary.com/nuxeo/image/upload/f_auto,q_auto:eco/v1528141049/backgrounds/nuxeo-bg-45.jpg');">
   <div class="large-8 medium-10 small-12 columns">
     <h1>
       {{ (index .Site.Data.bench $data).bench_suite }} <span
