Index page updates as requested

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,9 @@
   <div class="large-8 medium-10 small-12 columns">
     <h1>Nuxeo Performance Benchmarks</h1>
     <p class="larger is-white">
-      We're open and transparent.<br>
+      We're open and transparent.
+    </p>
+    <p class="larger is-white">
       We've tested our platform in rigorous scenarios, and we're confident that we're the most performant Content Services Platform on the market.
     </p>
   </div>
@@ -26,46 +28,56 @@
   </div>
 </div>
 
-<div class="row paddedt1 benefits">
+<div class="row padded benefits" data-equalizer="heading-cards" data-equalizer-on="medium" data-equalize-by-row="true">
   <div class="small-12 large-4 columns">
-    <div class="padded0 is-bg-navy full-height">
-      <h2>Proven Performance</h2>
+    <div class="padded0 is-bg-grey is-black full-height">
+      <h2 data-equalizer-watch="heading-cards">Proven Performance</h2>
       <p>Nuxeo's hybrid architecture approach (NoSQL or SQL databases) has been validated to accomodate more than one billion documents, yielding impressive results such as the ability to import 30,000+ documents per second.</p>
     </div>
   </div>
   <div class="small-12 large-4 columns">
-    <div class="padded0 is-bg-navy full-height">
-      <h2>Higher Speed Transfers and Strict Security Controls</h2>
+    <div class="padded0 is-bg-grey is-black full-height">
+      <h2 data-equalizer-watch="heading-cards">Higher Speed Transfers and Strict Security Controls</h2>
       <p>To combat slower speeds, we built Nuxeo Edge Cache to reduce download times by up to 95% and bandwidth consumption by 90%&mdash;all while keeping your digital assets safe&mdash;even when cached.</p>
     </div>
   </div>
   <div class="small-12 large-4 columns">
-    <div class="padded0 is-bg-navy full-height">
-      <h2>Architected for Future-proof Flexibility</h2>
+    <div class="padded0 is-bg-grey is-black full-height">
+      <h2 data-equalizer-watch="heading-cards">Architected for Future-proof Flexibility</h2>
       <p>Choose from many SQL and NoSQL (e.g. MongoDB) database options for storage, and even shard on several databases for even higher throughput. Your search can be configured using SQL-based queries, Elasticsearch, or a combination of both.</p>
     </div>
   </div>
+  <div class="small-12 columns padded0">
+  </div>
+  <div class="small-12 medium-4 columns">
+    <a href="/milestone/" class="button-square button-square--tall is-bg-orange">Performance Bench or each release &gt;</a>
+  </div>
+  <div class="small-12 medium-4 columns">
+    <a href="/continuous/" class="button-square button-square--tall is-bg-orange">CI Updates &gt;</a>
+  </div>
+  <div class="small-12 medium-4 columns">
+    <a href="/infra/" class="button-square button-square--tall is-bg-orange">Infrastructure &gt;</a>
+  </div>
 </div>
 
-<div class="row paddedt1">
-  <div class="small-12 medium-4 columns">
-    <a href="/milestone/" class="button-square is-bg-blue">Performance Bench or each release &gt;</a>
-  </div>
-  <div class="small-12 medium-4 columns">
-    <a href="/continuous/" class="button-square is-bg-blue">CI Updates &gt;</a>
-  </div>
-  <div class="small-12 medium-4 columns">
-    <a href="/infra/" class="button-square is-bg-blue">Infrastructure &gt;</a>
-  </div>
-</div>
-
-<div class="row is-bg-grey paddedt1 blog-section">
+<div class="row is-bg-grey padded blog-section">
   <div class="small-12 columns">
     <h2 class="is-purple">Latest blog posts</h2>
   </div>
 </div>
 
-<div class="row paddedt1">
+<div class="row padded collapse">
+  <div class="small-12 medium-6 columns is-bg-aqua cover" style="background-image: url('http://res.cloudinary.com/nuxeo/image/upload/w_600,q_auto:eco,c_limit,dpr_auto,f_auto/backgrounds/duotone4')">
+  </div>
+  <div class="small-12 medium-6 columns is-bg-navy">
+    <div class="padded">
+      <h2>About Nuxeo</h2>
+      <p>We're focused on creating the world's most flexible, scalable Content Services Platform. We help out customers build applications that take advantage of the latest technologies and content methodologies. To achieve this, we built a platform and intuitive tools to make it easy for you to quicky build the applications you need to soolve even your most complex content challenges.</p>
+    </div>
+  </div>
+</div>
+
+<div class="row padded">
   <div class="small-12 medium-4 columns">
     <a href="https://www.nuxeo.com/request-demo/" class="button-square is-bg-blue">Request a demo</a>
   </div>
@@ -74,17 +86,6 @@
   </div>
   <div class="small-12 medium-4 columns">
     <a href="https://www.nuxeo.com/downloads/" class="button-square is-bg-blue">Download the Nuxeo Platform</a>
-  </div>
-</div>
-
-<div class="row paddedt1 collapse">
-  <div class="small-12 medium-6 columns is-bg-aqua cover" style="background-image: url('http://res.cloudinary.com/nuxeo/image/upload/w_600,q_auto:eco,c_limit,dpr_auto,f_auto/backgrounds/duotone4')">
-  </div>
-  <div class="small-12 medium-6 columns is-bg-navy">
-    <div class="padded">
-      <h2>About Nuxeo</h2>
-      <p>We're focused on creating the world's most flexible, scalable Content Services Platform. We help out customers build applications that take advantage of the latest technologies and content methodologies. To achieve this, we built a platform and intuitive tools to make it easy for you to quicky build the applications you need to soolve even your most complex content challenges.</p>
-    </div>
   </div>
 </div>
 
