--- a/themes/hyde/layouts/partials/head.html
+++ b/themes/hyde/layouts/partials/head.html
@@ -40,15 +40,9 @@ analytics.page()
 </script>
 <!-- tracking code -->
 
-  <!-- js -->
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js"
-    integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="
-    crossorigin="anonymous"></script>
-  <script src="{{ .Site.BaseURL }}js/tabs.js"></script>
-
   <!-- CSS -->
 
-  <link rel="stylesheet" href="//static.nuxeo.com/satellite/8.0.3-menu.1/css/v2-nuxeo-styles.css">
+  <link rel="stylesheet" href="//static.nuxeo.com/satellite/8.2.1/css/v2-nuxeo-styles.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/benchmarks.css">
   <!-- <link rel="stylesheet" href="{{ .Site.BaseURL }}css/poole.css"> -->
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css">
