--- a/themes/hyde/static/css/benchmarks.css
+++ b/themes/hyde/static/css/benchmarks.css
@@ -8,6 +8,12 @@ a.button-square, a:link.button-square {
   height: 100%;
 }
 
+a.button-square--tall,
+a:link.button-square--tall {
+  padding-top: 2em;
+  padding-bottom: 1.5em;
+}
+
 a.button-square:hover {
   background: #1F28BF;
 }
