--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,25 +30,26 @@
 
 <div class="row padded benefits" data-equalizer="heading-cards" data-equalizer-on="medium" data-equalize-by-row="true">
   <div class="small-12 large-4 columns">
-    <div class="padded0 is-bg-grey is-black full-height">
+    <div class="padded0 is-bg-grey is-blue full-height">
       <h2 data-equalizer-watch="heading-cards">Proven Performance</h2>
       <p>Nuxeo's hybrid architecture approach (NoSQL or SQL databases) has been validated to accomodate more than one billion documents, yielding impressive results such as the ability to import 30,000+ documents per second.</p>
     </div>
   </div>
   <div class="small-12 large-4 columns">
-    <div class="padded0 is-bg-grey is-black full-height">
+    <div class="padded0 is-bg-grey is-blue full-height">
       <h2 data-equalizer-watch="heading-cards">Higher Speed Transfers and Strict Security Controls</h2>
       <p>To combat slower speeds, we built Nuxeo Edge Cache to reduce download times by up to 95% and bandwidth consumption by 90%&mdash;all while keeping your digital assets safe&mdash;even when cached.</p>
     </div>
   </div>
   <div class="small-12 large-4 columns">
-    <div class="padded0 is-bg-grey is-black full-height">
+    <div class="padded0 is-bg-grey is-blue full-height">
       <h2 data-equalizer-watch="heading-cards">Architected for Future-proof Flexibility</h2>
       <p>Choose from many SQL and NoSQL (e.g. MongoDB) database options for storage, and even shard on several databases for even higher throughput. Your search can be configured using SQL-based queries, Elasticsearch, or a combination of both.</p>
     </div>
   </div>
-  <div class="small-12 columns padded0">
-  </div>
+
+  <div class="small-12 columns padded0"></div>
+
   <div class="small-12 medium-4 columns">
     <a href="/milestone/" class="button-square button-square--tall is-bg-orange">Performance Bench or each release &gt;</a>
   </div>
@@ -62,7 +63,7 @@
 
 <div class="row is-bg-grey padded blog-section">
   <div class="small-12 columns">
-    <h2 class="is-purple">Latest blog posts</h2>
+    <h2 class="is-blue">Latest blog posts</h2>
   </div>
 </div>
 
