--- a/layouts/section/misc.html
+++ b/layouts/section/misc.html
@@ -2,7 +2,7 @@
 <body class="{{ .Site.Params.themeColor }}">
 {{ partial "header.html" . }}
 
-<div class="hero row cover padded1 is-bg-blue is-white" style="background-image: url('https://res.cloudinary.com/nuxeo/image/upload/f_auto,q_auto:eco/v1528141049/backgrounds/nuxeo-bg-45.jpg');">
+<div class="hero row cover padded1 is-bg-blue is-white" style="background-image: url('https://res.cloudinary.com/nuxeo/image/upload/w_1600,h_400,q_auto:eco,c_fill,g_center,dpr_auto,f_auto/backgrounds/duotone9');">
   <div class="large-8 medium-10 small-12 columns">
     <h1>Misc Benchmarks results</h1>
     <p class="larger is-white">
