--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <body class="{{ .Site.Params.themeColor }} home">
 {{ partial "header.html" . }}
 
-<div class="hero row cover padded is-bg-blue is-white" style="background-image: url('http://res.cloudinary.com/nuxeo/image/upload/w_1600,h_400,q_auto:eco,c_fill,g_center,dpr_auto,f_auto/backgrounds/duotone9');">
+<div class="hero row cover padded is-bg-blue is-white" style="background-image: url('https://res.cloudinary.com/nuxeo/image/upload/w_1600,h_400,q_auto:eco,c_fill,g_center,dpr_auto,f_auto/backgrounds/duotone9');">
   <div class="large-8 medium-10 small-12 columns">
     <h1>Nuxeo Performance Benchmarks</h1>
     <p class="larger is-white">
@@ -68,7 +68,7 @@
 </div>
 
 <div class="row padded collapse">
-  <div class="small-12 medium-6 columns is-bg-aqua cover" style="background-image: url('http://res.cloudinary.com/nuxeo/image/upload/w_600,q_auto:eco,c_limit,dpr_auto,f_auto/backgrounds/duotone9')">
+  <div class="small-12 medium-6 columns is-bg-aqua cover" style="background-image: url('https://res.cloudinary.com/nuxeo/image/upload/w_600,q_auto:eco,c_limit,dpr_auto,f_auto/backgrounds/duotone9')">
   </div>
   <div class="small-12 medium-6 columns is-bg-navy">
     <div class="padded">
