Benchmarks link text updated

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -51,7 +51,7 @@
   <div class="small-12 columns padded0"></div>
 
   <div class="small-12 medium-4 columns">
-    <a href="/milestone/" class="button-square button-square--tall is-bg-orange">Performance Bench or each release &gt;</a>
+    <a href="/milestone/" class="button-square button-square--tall is-bg-orange">Performance Benchmarks for each release &gt;</a>
   </div>
   <div class="small-12 medium-4 columns">
     <a href="/continuous/" class="button-square button-square--tall is-bg-orange">CI Updates &gt;</a>
