Blog posts: equalise title heights

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -61,7 +61,7 @@
   </div>
 </div>
 
-<div class="row is-bg-grey padded blog-section">
+<div class="row is-bg-grey padded blog-section" data-equalizer="blog-cards" data-equalizer-on="medium" data-equalize-by-row="true">
   <div class="small-12 columns">
     <h2 class="is-blue">Latest blog posts</h2>
   </div>
